--- a/locale/en/LC_MESSAGES/djangojs.po
+++ b/locale/en/LC_MESSAGES/djangojs.po
@@ -27,11 +27,11 @@ msgstr "Last active"
 
 #: stats/static/stats/user_ranking.js:20
 msgid "Overall"
-msgstr "Overall"
+msgstr "Overall level"
 
 #: stats/static/stats/user_ranking.js:23
 msgid "Adult"
-msgstr "Adult"
+msgstr "Mosquito level"
 
 #: stats/static/stats/user_ranking.js:24 stats/static/stats/user_ranking.js:29
 #: stats/static/stats/user_ranking.js:34
@@ -44,8 +44,8 @@ msgstr "Bite"
 
 #: stats/static/stats/user_ranking.js:33
 msgid "Site"
-msgstr "Site"
+msgstr "Site level"
 
 #: stats/static/stats/user_ranking.js:38
 msgid "Other"
-msgstr "Other"
+msgstr "Other score"
