--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Tigatrapp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-27 08:31+0000\n"
+"POT-Creation-Date: 2020-08-19 07:58+0000\n"
 "PO-Revision-Date: 2015-07-16 15:20+0100\n"
 "Last-Translator: John Palmer <johnrbpalmer@gmail.com>\n"
 "Language-Team: John Palmer\n"
@@ -460,7 +460,7 @@ msgstr "Bidones y pozos"
 #: tigamap/templates/tigamap/app_new.html:197
 #: tigamap/templates/tigamap/site_map.html:207
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:386
-#: tigaserver_app/models.py:565
+#: tigaserver_app/models.py:567
 msgid "Other"
 msgstr "Otros"
 
@@ -571,19 +571,19 @@ msgstr "Puntos"
 
 #: tigamap/templates/tigamap/site_map.html:192
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:371
-#: tigaserver_app/models.py:557
+#: tigaserver_app/models.py:559
 msgid "storm-drain"
 msgstr "Sumidero"
 
 #: tigamap/templates/tigamap/site_map.html:195
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:374
-#: tigaserver_app/models.py:559
+#: tigaserver_app/models.py:561
 msgid "Fountain"
 msgstr "Fuente"
 
 #: tigamap/templates/tigamap/site_map.html:198
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:377
-#: tigaserver_app/models.py:561
+#: tigaserver_app/models.py:563
 msgid "Basin"
 msgstr "Pequeña balsa artificial"
 
@@ -594,7 +594,7 @@ msgstr "Bidón"
 
 #: tigamap/templates/tigamap/site_map.html:204
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:383
-#: tigaserver_app/models.py:563
+#: tigaserver_app/models.py:565
 msgid "Well"
 msgstr "Pozo"
 
@@ -1126,17 +1126,61 @@ msgstr " meses"
 msgid " days ago"
 msgstr " días"
 
-#: tigaserver_app/models.py:540
+#: tigaserver_app/models.py:542
 msgid "High"
 msgstr "Alta"
 
-#: tigaserver_app/models.py:542
+#: tigaserver_app/models.py:544
 msgid "Medium"
 msgstr "Media"
 
-#: tigaserver_app/models.py:544
+#: tigaserver_app/models.py:546
 msgid "Low"
 msgstr "Baja"
+
+#: tigaserver_app/models.py:1219
+msgid "species_unclassified"
+msgstr "No identificable"
+
+#: tigaserver_app/models.py:1220
+msgid "species_other"
+msgstr "Otras especies"
+
+#: tigaserver_app/models.py:1221
+msgid "species_albopictus"
+msgstr "mosquito tigre (Aedes albopictus)"
+
+#: tigaserver_app/models.py:1222
+msgid "species_aegypti"
+msgstr "mosquito de la fiebre amarilla (Aedes aegypti)"
+
+#: tigaserver_app/models.py:1223
+msgid "species_japonicus"
+msgstr "mosquito del Japón (Aedes japonicus)"
+
+#: tigaserver_app/models.py:1224
+msgid "species_koreicus"
+msgstr "mosquito de Corea (Aedes koreicus)"
+
+#: tigaserver_app/models.py:1225
+msgid "species_complex"
+msgstr "Mezcla de especies"
+
+#: tigaserver_app/models.py:1226
+msgid "species_notsure"
+msgstr "No está claro"
+
+#: tigaserver_app/models.py:1227
+msgid "species_culex"
+msgstr "mosquito común (Culex sp.)"
+
+#: tigaserver_app/models.py:1240
+msgid "species_value_possible"
+msgstr "Probable"
+
+#: tigaserver_app/models.py:1241
+msgid "species_value_confirmed"
+msgstr "Confirmado"
 
 #: tigaserver_messages/fields.py:56
 #, python-format
